# ots-sdk

./: .gitignore  README.md  pyproject.toml
ots_sdk/: api.py  helpers.py  http_client.py
src/ots_sdk/: __init__.py  api.py  helpers.py  http_client.py
tests/: test_api.py
