[project]
name = "ots-sdk"
version = "1.0.0"
description = "Forked Python SDK for the Omnia Timeseries API"
readme = "README.md"
requires-python = ">=3.10,<4.0"

dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "azure-identity >=1.24.0",
    "azure-core>=1.30.0,<2.0.0",
    "opentelemetry-instrumentation-requests >=0.54b1,<1.0.0",
    "opentelemetry-api >=1.27.0,<2.0.0",
    "cryptography >=43.0.3",
]

[tool.poetry.group.test.dependencies]
pytest = ">=7.4.0,<8.0.0"
requests-mock = ">=1.9.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.0.0,<5.0.0"
black = ">=22.0,<26.0"

[project.urls]
repository = "https://github.com/asmfstatoil/omnia-timeseries-python"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '^/src/version.py'
extend-exclude = '''
(
^/foo.py
| .*_pb2.py
)
'''

[build-system]
requires = ["poetry-core>=2.0,<3.0"]
build-backend = "poetry.core.masonry.api"
